@@ -1,4 +1,6 @@
 yatc
 ====
 
-Yet Another Thin Client - small gui application to start freerdp session to MS Terminal Server
+Yet Another Thin Client - small gui application to start freerdp session to MS Terminal Server.
+
+YATC can use FreeRDP or "2X RDP Client" as backend for RDP connection.
