@@ -1,3 +1,9 @@
+YATC 0.9.1:
+  yatc.py:
+    1. Add support of "2X RDP client" as backend for RDP connection.
+
+  post-install.sh:
+    1. Add support of "2X RDP client" as backend for RDP connection.
 YATC 0.8.4:
   yatc.py:
     1. Print version to  ~/.yatc/version file on startup.
